--- a/templates/historiales/crearHistorial.html
+++ b/templates/historiales/crearHistorial.html
@@ -3,12 +3,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Crear Paciente</title>
+  <title>Crear Historial Clínico</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="container py-5">
 
-  <h1 class="mb-4 text-center">Ingresar Paciente al Sistema</h1>
+  <h1 class="mb-4 text-center">Crear Historial Clínico</h1>
   {% load crispy_forms_tags %}
 
   <div class="row justify-content-center">
@@ -19,7 +19,7 @@
 
         <div class="d-flex justify-content-between mt-3">
           <button type="submit" class="btn btn-success">Guardar</button>
-          <a href="{% url 'listar_pacientes' %}" class="btn btn-secondary">Volver</a>
+          <a href="{% url 'listar_historiales' %}" class="btn btn-secondary">Volver</a>
         </div>
       </form>
     </div>
