--- a/templates/recetas/crearReceta.html
+++ b/templates/recetas/crearReceta.html
@@ -3,12 +3,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Crear Paciente</title>
+  <title>Crear Receta Médica</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="container py-5">
 
-  <h1 class="mb-4 text-center">Ingresar Paciente al Sistema</h1>
+  <h1 class="mb-4 text-center">Crear Receta Médica</h1>
   {% load crispy_forms_tags %}
 
   <div class="row justify-content-center">
@@ -18,8 +18,8 @@
         {{ form|crispy }}
 
         <div class="d-flex justify-content-between mt-3">
-          <button type="submit" class="btn btn-success">Guardar</button>
-          <a href="{% url 'listar_pacientes' %}" class="btn btn-secondary">Volver</a>
+          <button type="submit" class="btn btn-success">Guardar Receta</button>
+          <a href="{% url 'listar_recetas' %}" class="btn btn-secondary">Volver al listado de recetas</a>
         </div>
       </form>
     </div>
@@ -27,4 +27,3 @@
 
 </body>
 </html>
-
