Edición minima en UI

--- a/templates/recetas/verRecetas.html
+++ b/templates/recetas/verRecetas.html
@@ -8,7 +8,7 @@
 </head>
 <body class="container py-5">
 
-<h1 class="mb-4">Recetas de la Cita #{{ cita.id }}</h1>
+<h1 class="mb-4">💊 Recetas de la Cita #{{ cita.id }}</h1>
 <p><strong>Paciente:</strong> {{ cita.paciente.nombre }}</p>
 <p><strong>Médico:</strong> {{ cita.medico.nombre }}</p>
 <p><strong>Fecha:</strong> {{ cita.fecha }}</p>
