--- a/templates/recetas/listarRecetas.html
+++ b/templates/recetas/listarRecetas.html
@@ -8,7 +8,7 @@
 </head>
 <body class="container py-5">
 
-<h1 class="mb-4">Recetas Médicas</h1>
+<h1 class="mb-4">Recetas Médicas 💊</h1>
 
 <table class="table table-striped table-bordered">
   <thead class="table-dark">
